add: step based increaseWindow feature